After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 686021 - spinner animation should not be subject to enable-animations setting
spinner animation should not be subject to enable-animations setting
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2012-10-12 11:52 UTC by Matthias Clasen
Modified: 2012-11-01 11:29 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matthias Clasen 2012-10-12 11:52:18 UTC
Or at least, there should be some alternative way to convey activity in this case. Just not doing anything breaks the spinner.
Comment 1 Christian Persch 2012-10-12 16:30:41 UTC
IMO it would be preferable for the spinner to just alter its appearance between active and inactive state, but not animate, when animations are disabled. (Personally, I expect setting gtk-enable-animations = false to really eliminate *all* animations.)