settings: Reset all styles when the enable-animations settings changes

https://bugzilla.gnome.org/show_bug.cgi?id=686021